{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 15,
  "lineage": "bbd3c2ae-0b6d-36b8-e4a6-1e7d09383b49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d13cfadb68394598",
            "association_id": "eipassoc-072e4d186af1422ad",
            "domain": "vpc",
            "id": "eipalloc-0d13cfadb68394598",
            "instance": "i-005f3f2f0f118eff6",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0fc918c6adb31ccae",
            "private_dns": "ip-10-0-101-235.us-east-2.compute.internal",
            "private_ip": "10.0.101.235",
            "public_dns": "ec2-52-15-214-155.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.214.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_vm",
            "aws_key_pair.app_ssh",
            "aws_security_group.vm_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024e6efaf93d85776",
            "arn": "arn:aws:ec2:us-east-2:707817562255:instance/i-005f3f2f0f118eff6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005f3f2f0f118eff6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "application-ssh-ZfM",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc918c6adb31ccae",
            "private_dns": "ip-10-0-101-235.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ae346b6f9d5f4e56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012c7747b112cdff6",
            "tags": {
              "Name": "application-vm",
              "createdBy": "terraform-user"
            },
            "tags_all": {
              "Name": "application-vm",
              "createdBy": "terraform-user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8c3c2adcc631934"
            ]
          },
          "dependencies": [
            "aws_key_pair.app_ssh",
            "aws_security_group.vm_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707817562255:security-group/sg-0a8c3c2adcc631934",
            "description": "Allow incoming connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a8c3c2adcc631934",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vm-security-group",
            "name_prefix": "",
            "owner_id": "707817562255",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a76a0944a1bbd54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707817562255:network-acl/acl-0e847121db04324b9",
            "default_network_acl_id": "acl-0e847121db04324b9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e847121db04324b9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "707817562255",
            "subnet_ids": [
              "subnet-012c7747b112cdff6"
            ],
            "tags": {
              "Name": "application-vpc-default",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc-default",
              "createdBy": "\u003c%=username%\u003e"
            },
            "vpc_id": "vpc-04a76a0944a1bbd54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707817562255:route-table/rtb-07a189bc02035ce5d",
            "default_route_table_id": "rtb-07a189bc02035ce5d",
            "id": "rtb-07a189bc02035ce5d",
            "owner_id": "707817562255",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "application-vpc-default",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc-default",
              "createdBy": "\u003c%=username%\u003e"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04a76a0944a1bbd54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707817562255:security-group/sg-0755769544f0d21ce",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0755769544f0d21ce",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "707817562255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application-vpc-default",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc-default",
              "createdBy": "\u003c%=username%\u003e"
            },
            "vpc_id": "vpc-04a76a0944a1bbd54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707817562255:internet-gateway/igw-00688582a73cf391a",
            "id": "igw-00688582a73cf391a",
            "owner_id": "707817562255",
            "tags": {
              "Name": "application-vpc",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc",
              "createdBy": "\u003c%=username%\u003e"
            },
            "vpc_id": "vpc-04a76a0944a1bbd54"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00688582a73cf391a",
            "id": "r-rtb-0a7a941cc3abd5a4a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7a941cc3abd5a4a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707817562255:route-table/rtb-0a7a941cc3abd5a4a",
            "id": "rtb-0a7a941cc3abd5a4a",
            "owner_id": "707817562255",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "application-vpc-public",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc-public",
              "createdBy": "\u003c%=username%\u003e"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a76a0944a1bbd54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fc17d4eac4223af",
            "route_table_id": "rtb-0a7a941cc3abd5a4a",
            "subnet_id": "subnet-012c7747b112cdff6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707817562255:subnet/subnet-012c7747b112cdff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012c7747b112cdff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707817562255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "application-vpc-public-us-east-2a",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc-public-us-east-2a",
              "createdBy": "\u003c%=username%\u003e"
            },
            "vpc_id": "vpc-04a76a0944a1bbd54"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:707817562255:vpc/vpc-04a76a0944a1bbd54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e847121db04324b9",
            "default_route_table_id": "rtb-07a189bc02035ce5d",
            "default_security_group_id": "sg-0755769544f0d21ce",
            "dhcp_options_id": "dopt-0815c602788ecf890",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a76a0944a1bbd54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a189bc02035ce5d",
            "owner_id": "707817562255",
            "tags": {
              "Name": "application-vpc",
              "createdBy": "\u003c%=username%\u003e"
            },
            "tags_all": {
              "Name": "application-vpc",
              "createdBy": "\u003c%=username%\u003e"
            }
          }
        }
      ]
    }
  ]
}